# binary-script-packer

./: .clang-format  .gitignore  .gitmodules  .splintrc  CMakeLists.txt  README.md  binscript.h  default.nix  example.hex  example.langdef  libsweetparse  makefile
src/: bitbuffer.c  bitbuffer.h  langdef.c  langdef.h  main.c  parsescript.c  parsescript.h  scripter.c  translator.c  translator.h  util.c  util.h
tests/: mkmutest  mutest.h  suite_runner.c
tests/suites/: bitbuffer_test.c  parsescript_test.c  sample_test.c  translate_test.c  util_test.c
